[package]
name = "fast-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
terminal-spinners = "0.3.2"
