[package]
name = "nettest"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Sandman"]
description = "A tool to show internet speed in the terminal."
readme = "README.md"
homepage = "https://github.com/sandmanlukas/nettest"
repository = "https://github.com/sandmanlukas/nettest"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
colored = "2.0.0"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
terminal-spinners = "0.3.2"
